--- a/01. Getting Started .ipynb
+++ b/01. Getting Started .ipynb
@@ -54,10 +54,12 @@
     "* Pandas (http://pandas.pydata.org/pandas-docs/stable/)\n",
     "* Matplotlib (https://matplotlib.org/)\n",
     "* Numpy (http://www.numpy.org/)\n",
-    "* **Patience**\n",
     "\n",
+    "**The easiest approach to getting started should be to download conda:**\n",
     "\n",
-    "***I use Anaconda as my environement**"
+    "https://conda.io/docs/index.html\n",
+    "\n",
+    "https://conda.io/docs/user-guide/install/index.html\n"
    ]
   },
   {
@@ -74,22 +76,13 @@
     "* Background information: http://www.miljodirektoratet.no/Documents/publikasjoner/M694/M694.pdf\n",
     "* OPeNDAP documentation: http://docs.opendap.org/index.php/UserGuideOPeNDAPMessages\n",
     "* Our metadata server: http://ebasoai.nilu.no/oai?verb=Identify\n",
-    "* EBAS I/O: \n",
-    "* GitHub repository:\n",
-    "* Direct link to the issue tracker:\n",
+    "* EBAS I/O: https://git.nilu.no/ebas/ebas-io/wikis/home\n",
+    "* GitHub repository: https://github.com/richard-olav/ebas-data-retrieval-session\n",
+    "* Direct link to the issue tracker: https://github.com/richard-olav/ebas-data-retrieval-session/issues\n",
     "* EBAS web portal: http://ebas.nilu.no/\n",
     "* Templates overview (especially usefull for understanding the metadata): http://ebas-submit.nilu.no/\n",
     "* For finding a color scheme http://colorbrewer2.org"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
