more conversions to python3

--- a/python3/02. Basic data retrieval and plotting.ipynb
+++ b/python3/02. Basic data retrieval and plotting.ipynb
@@ -222,7 +222,7 @@
    },
    "outputs": [],
    "source": [
-    "print len(mercury_ds.mercury_ebasmetadata.mercury_ebasmetadata.data)"
+    "print(len(mercury_ds.mercury_ebasmetadata.mercury_ebasmetadata.data))"
    ]
   },
   {
