--- a/python3/03. Carbon Dioxide and Methane.ipynb
+++ b/python3/03. Carbon Dioxide and Methane.ipynb
@@ -133,7 +133,7 @@
     "carbon_dioxide_metadata = ds['carbon_dioxide_amean_ebasmetadata'].carbon_dioxide_amean_ebasmetadata.data\n",
     "print(len(carbon_dioxide_metadata))\n",
     "#No wavelenghts this time, so there is just one element in the list\n",
-    "print carbon_dioxide_metadata[0]"
+    "print(carbon_dioxide_metadata[0])"
    ]
   },
   {
@@ -157,8 +157,6 @@
     "\n",
     "plot.xaxis.axis_label = 'Date'\n",
     "plot.yaxis.axis_label = 'umol/mol'\n",
-    "\n",
-    "plot.toolbar.logo = None\n",
     "\n",
     "show(plot)"
    ]
@@ -193,8 +191,6 @@
     "                fill_alpha=0.05, hover_alpha=0.3,\n",
     "                line_color=None, hover_line_color=\"white\")\n",
     "\n",
-    "plot.toolbar.logo = None\n",
-    "\n",
     "# We add a hover tool for the dots, so we matches everything that matches in a horizontal line we can alos do this vertically \n",
     "#plot.add_tools(HoverTool(tooltips=None, renderers=[dots], mode='vline'))\n",
     "\n",
@@ -221,7 +217,7 @@
     "ds = open_dods('http://dev-ebas-pydap.nilu.no/NO0042G.online_crds.IMG.air.methane.1h.NO01L_picarro2_G2401.NO01L_picarro.2.dods')\n",
     "\n",
     "for key in ds.keys():\n",
-    "    print key"
+    "    print(key)"
    ]
   },
   {
@@ -342,8 +338,6 @@
     "\n",
     "plot.xaxis.axis_label = 'Date'\n",
     "plot.yaxis.axis_label = 'nmol/mol'\n",
-    "\n",
-    "plot.toolbar.logo = None\n",
     "\n",
     "show(plot)"
    ]
