even more conversion to python 3

--- a/python3/03. Carbon Dioxide and Methane.ipynb
+++ b/python3/03. Carbon Dioxide and Methane.ipynb
@@ -357,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "from bokeh.layouts import gridplot\n",
+    "from bokeh.io import gridplot\n",
     "from bokeh.models import ColumnDataSource\n",
     "\n",
     "x = x_carbon_dioxide\n",
