--- a/python3/06. Aerosol Optical Depth.ipynb
+++ b/python3/06. Aerosol Optical Depth.ipynb
@@ -56,11 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ds' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5a28e64eb025>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# append data to variables\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0maerosol_optical_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'aerosol_optical_depth_amean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# Take from numpy array to regular array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ds' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# append data to variables\n",
     "\n",
@@ -70,10 +80,10 @@
     "#Here we ge the metadata for each wavelength\n",
     "\n",
     "# Fetch metadata\n",
-    "print ds.aerosol_optical_depth_amean_ebasmetadata.keys\n",
+    "print(ds.aerosol_optical_depth_amean_ebasmetadata.keys)\n",
     "\n",
     "#Get wavelengths for labels\n",
-    "print ds.aerosol_optical_depth_median_ebasmetadata.Wavelength.data\n",
+    "print(ds.aerosol_optical_depth_median_ebasmetadata.Wavelength.data)\n",
     "\n",
     "\n",
     "y = aerosol_optical_depth.data[0]\n",
